[gd_scene load_steps=4 format=3 uid="uid://bq7l5gqmaff1w"]

[ext_resource type="Texture2D" uid="uid://b8xy6502lhgon" path="res://game/1-order-station/Untitled1526_20250310181454.png" id="1_14hf0"]
[ext_resource type="Script" path="res://game/4-sauce-station/4_sauce.gd" id="1_41gj0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f64wr"]
size = Vector2(210, 486)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_41gj0")

[node name="Untitled152620250310181454" type="Sprite2D" parent="."]
texture = ExtResource("1_14hf0")

[node name="TextureButton" type="TextureButton" parent="Untitled152620250310181454"]
offset_left = -81.0
offset_top = -243.0
offset_right = 96.0
offset_bottom = 250.0

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -3)
shape = SubResource("RectangleShape2D_f64wr")

[connection signal="button_down" from="Untitled152620250310181454/TextureButton" to="." method="_on_texture_button_button_down"]
[connection signal="button_up" from="Untitled152620250310181454/TextureButton" to="." method="_on_texture_button_button_up"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
